--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
   <!-- Scripts -->
   <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   <script>
-    const RAZORPAY_KEY_ID = 'YOUR_RAZORPAY_KEY_ID'; // replace with your real key
+    const RAZORPAY_KEY_ID = 'rzp_live_LNZR89JqwRgbmd'; // replace with your real key
 
     function buyNow(title, amount, sku) {
       const amountPaise = amount * 100;
